[package]
name = "casbin-rust-cli"
version = "1.2.0"
edition = "2021"
authors = [
    "LiuliFox <liulifox@qq.com>"
]
license = "Apache-2.0"
description = "casbin-rust-cli is a command-line tool based on Casbin (Rust language), enabling you to use all of Casbin APIs in the shell."
homepage= "https://github.com/casbin-rs/casbin-rust-cli"
repository = "https://github.com/casbin-rs/casbin-rust-cli"
readme= "README.md"

[dependencies]
casbin = { version = "2.8.0", features = ["explain", "logging"] }
clap = { version = "4.5.27", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
clap_complete_command = "0.6.1"
