[package]
name = "casbin-rust-cli"
version = "1.3.0"
edition = "2021"
authors = [
    "LiuliFox <liulifox@qq.com>"
]
license = "Apache-2.0"
description = "casbin-rust-cli is a command-line tool based on Casbin (Rust language), enabling you to use all of Casbin APIs in the shell."
homepage= "https://github.com/casbin-rs/casbin-rust-cli"
repository = "https://github.com/casbin-rs/casbin-rust-cli"
readme= "README.md"

[dependencies]
casbin = { version = "2.10.1", features = ["explain", "logging", "ip"] }
clap = { version = "4.5.28", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
clap_complete_command = "0.6.1"
build-info = "0.0.39"

[build-dependencies]
build-info-build = "0.0.39"
